--- a/css/style.css
+++ b/css/style.css
@@ -19,25 +19,32 @@ a {
   display: none;
 }
 
+
+.container {
+  padding: 0 10px;
+  width: 940px;
+  margin: 0 auto;
+}
+
 .main-header {
   background-color: #f3f7f8;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .top-menu {
-  width: 1200px;
   font-size: 17px;
   line-height: 28px;
   color: #ffffff;
   background-color: #293449;
+  
+}
+
+.top-menu .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: stretch;
+  align-items: center;
 }
 
 .top-menu a {
@@ -45,43 +52,158 @@ a {
 }
 
 .main-header-logo {
+  display: inline-block;
   width: 220px;
-  height: 42px;
   font-size: 24px;
-  line-height: 45px;
+  line-height: 24px;
   background-color: #ee3643;
   text-transform: uppercase;
   text-align: center;
-  border-bottom: 5px solid #b52933;
+  position: relative;
+  padding: 0;
+  padding-top: 10px;
+  padding-bottom: 8px;
+}
+
+.main-header-logo:hover {
+  background-color: #ca2c37;
+}
+
+.main-header-logo:active {
+  background-color: #ba2732;
+}
+
+.main-header-logo::after {
+  width: 220px;
+  height: 5px;
+  content: "";
+  background-color: #b52933;
   position: absolute;
-  margin-left: 130px;
+  top: 42px;
+  left: 0;
+}
+
+.main-header-logo:hover::after {
+  background-color: #9a212a;
+}
+
+.main-header-logo:active::after {
+  background-color: #8e1e26;
 }
 
 .search-form {
   width: 270px;
-  margin-top: 8px;
-  margin-left: 365px;
-  margin-right: 50px;
+  position: relative;
+}
+
+.search-form input {
+  border: none;
+  outline: none;
+}
+
+.search-form input[type="search"] {
+  padding: 12px 0;
+  padding-left: 48px;
+  width: 224px;
+  height: 18px;
+  background-color: #293449;
+  box-sizing: content-box;
+}
+
+.search-form input[type="submit"] {
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  background: transparent url("../img/icon-search.svg") no-repeat;
+  font-size: 0;
+  opacity: 0.3;
+  top: 12px;
+  left: 17px;
+}
+
+.search-form input::-moz-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}  
+
+.search-form input::-webkit-input-placeholder {
+  color: #ffffff;
+  opacity: 1;
+}
+
+.search-form input:hover {
+  background-color: #212a3a;
+  opacity: 1;
+}
+
+.search-form input[type="search"]:focus {
+  color: #000000;
+  background-color: #ffffff;
 }
 
 .bookmark,
 .cart {
+  position: relative;
+  display: block;
   width: 150px;
-  margin-top: 7px;
+  height: 42px;
+}
+ 
+.bookmark a,
+.cart a {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 42px; 
+  padding-left: 45px;
+  font-weight: 400;
+}
+
+.bookmark a {  
+  padding-left: 45px;
+  font-weight: 400;
+}
+
+.cart a  {  
+  padding-left: 50px;
+  font-weight: 400;
+}
+
+.bookmark::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 17px;
+  width: 14px;
+  height: 16px;
+  background: transparent url("../img/icon-bookmark.svg") no-repeat;
+  opacity: 0.3;
+}
+
+.cart::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 18px;
+  width: 15px;
+  height: 16px;
+  background: transparent url("../img/icon-cart.svg") no-repeat;
+  opacity: 0.3;
 }
 
 .make-order {
   background-color: #63a63e;
   color: white;
-  margin-right: 130px;
   height: 42px;
-  width: 165px;
+  width: 150px;
   border: none;
 }
 
 .bottom-menu {
-  width: 940px;
   margin-top: 36px;
+}
+
+.bottom-menu .container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -96,6 +218,8 @@ a {
   font-weight: 700;
   color: #ee3643;
   max-width: 210px;
+  letter-spacing: -0.4px;
+  margin-top: 13px;
 }
 
 .info {
@@ -107,62 +231,103 @@ a {
 }
 
 .main-header-phone {
+  position: relative;
   font-size: 20px;
   font-weight: 700;
   color: #ee3643;
-  border: 3px solid #ffffff;
-  padding-left: 68px;
-  padding-right: 48px;
-  padding-top: 10px;
-  padding-bottom: 9px;
+  border: 3px solid #ffffff;    
+  padding-left: 72px;
+  letter-spacing: 0.42px;
+  padding-right: 51px;
+  padding-top: 12px;
+  padding-bottom: 11px;
+}
+
+.main-header-phone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  width: 19px;
+  height: 19px;
+  background: transparent url("../img/icon-phone.svg") no-repeat;
 }
 
 .main-header-adress {
-  margin-top: 12px;
+  margin-top: 8px;
   font-size: 13.5px;
   color: #3f4e66;
   font-weight: 700;
   text-align: center;
+  letter-spacing: 0.2px;
 }
 
 .user-navigation {
-  margin-top: -30px;
+  margin-top: -27px;
   padding: 0;
   width: 290px;
-  text-align: right;
-}
-
-
-.user-navigation a {
-  font-size: 21px;
-  line-height: 21px;
-  font-weight: 700;
-  color: black;
-  background-color: white;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  margin-left: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
 .login-link {
-  padding-left: 25px;
-  padding-right: 27px;
+  background-color: white;
+  position: relative;
+  display: block;
+  width: 121px;
+  height: 45px;
+  margin-left: 10px;
 }
 
 .registration-link {
+  background-color: white;
+  position: relative;
+  display: block;
+  width: 150px;
+  height: 45px;
+  margin-left: 10px;
+}
+
+.login-link a,
+.registration-link a {
+  font-size: 21px;
+  line-height: 45px;
+  font-weight: 700;
+  color: black;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.login-link a {  
+  padding-left: 46px;
+}
+
+.registration-link a  {  
   padding-left: 24px;
-  padding-right: 19.5px;
+}
+
+.login-link::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 17px;
+  width: 14px;
+  height: 16px;
+  background: transparent url("../img/icon-login.svg") no-repeat;
+  opacity: 0.3;
 }
 
 .main-navigation {
   width: 940px;
   background-color: #32425c;
-  margin-top: 30px;
+  margin-top: 29px;
   margin-bottom: 60px;
   border-bottom: 5px solid #293449;
 }
 
 .site-navigation {
+  margin: 0;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -171,18 +336,18 @@ a {
   list-style: none;
 }
 
+.site-navigation li {
+  display: inline-block;
+  vertical-align: top;
+}
+
 .site-navigation li a{
-  margin-left: 30px;
-  margin-right: 30px;
+  display: block;
+  padding: 17px 31px 14px 30px;
   line-height: 24px;
   font-size: 17px;
   color: white;
 
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
 }
 
 .features {
@@ -192,12 +357,12 @@ a {
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 57px;
+  margin-top: 59px;
 }
 
 .item {
   width: 300px;
-  height: 122px;
+  height: 123px;
   font-size: 20px;
   font-weight: 700;
   color: white;
@@ -207,7 +372,8 @@ a {
 .item h3 {
   line-height: 26px;
   padding-left: 23px;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
+  letter-spacing: 0.8px;
 }
 
 .item a {
@@ -227,19 +393,23 @@ a {
 }
 
 .materials {
-  background-color: #ffbf47;
+  background: #ffbf47 url("../img/icon-1.svg") no-repeat;
+  background-position: 213px 32px;
 }
 
 .instrument {
-  background-color: #3bbce3;
+  background: #3bbce3 url("../img/icon-2.svg") no-repeat;
+  background-position: 197px 33px;
 }
 
 .tech {
-  background-color: #dc91d8;
+  background: #dc91d8 url("../img/icon-3.svg") no-repeat;
+  background-position: 191px 31px;
 }
 
 .sale {
-  background-color: #8ed78f;
+  background: #8ed78f url("../img/icon-4.svg") no-repeat;
+  background-position: 196px 26px;
 }
 
 .sale h3,
@@ -248,15 +418,19 @@ a {
   padding-left: 23px;
   padding-top: 23px;
   margin-bottom: 20px;
+  letter-spacing: 0.8px;
 }
 
 .delivery {
-  background-color: #ffc047;
+  background: #ffc047 url("../img/icon-5.svg") no-repeat;
+  background-position: 191px 32px;
+  margin-top: -4px;
 }
 
 .slider {
   width: 620px;
   height: 266px;
+  margin-top: -1px;
 }
 
 
@@ -300,7 +474,7 @@ a {
   margin-top: -36px;
   margin-bottom: 130px;
 }
-
+   
 .link {
   font-size: 14px;
   font-weight: 400;
@@ -312,6 +486,10 @@ a {
   padding-right: 45px;
   padding-bottom: 9px;
   padding-top: 9px;
+}
+
+.slider-items .link {
+  padding-bottom: 12px;
 }
 
 .side-items {
@@ -326,14 +504,14 @@ a {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  margin-top: 36px;
+  margin-top: 33px;
 
 }
 
 .section-top h2 {
   font-size: 30px;
-  line-height: 32px;
-  padding-left: 30px;
+  line-height: 42px;
+  padding-left: 29px;
   font-weight: 400;
   text-transform: uppercase;
   color: #32425c;
@@ -343,6 +521,7 @@ a {
    margin-right: 25px;
    padding-left: 54px;
    padding-right: 54px;
+  line-height: 20px;
 }
 
 .popular {
@@ -391,7 +570,7 @@ a {
   line-height: 20px;
   padding-left: 16px;
   padding-right: 16px;
-  padding-top: 14px;
+  padding-top: 7px;
   color: black;
   margin: 0 auto;
 }
@@ -401,7 +580,7 @@ a {
   display: inline-block;
   width: 80px;
   margin-right: 10px;
-  padding: 10px 14px 10px 29px;
+  padding: 8px 12px 9px 29px;
   margin-bottom: 20px;
   font-size: 17px;
   line-height: 18px;
@@ -416,7 +595,7 @@ a {
   display: inline-block;
   width: 80px;
   margin-right: 10px;
-  padding: 10px 14px 10px 29px;
+  padding: 10px 14px 10px 30px;
   font-size: 17px;
   line-height: 18px;
   font-weight: 700;
@@ -455,7 +634,7 @@ a {
 }
 
 .brands .section-top h2 {
-  padding-left: 27px;
+  padding-left: 25px;
 }
 
 .brands .section-top .link {
@@ -485,32 +664,28 @@ a {
   margin-bottom: 16px;
 }
 
+
 .services {	
-  width: 1200px;
-  margin: 0 auto;
   color: black;
   background-color: #f4f8fa;
   margin-top: 75px;
-
-  padding-bottom: 100px;
 }
 
 .services h2{
-  padding-left: 130px;
-  padding-top: 75px;
+  padding-top: 70px;
   padding-right: 130px;
   font-size: 30px;
   text-transform: uppercase;
 }
 
 .services p{
-  padding-left: 130px;
   padding-right: 130px;
-  padding-top: 10px;
+  padding-top: 7px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
-  line-height: 22px;
+  line-height: 24px;
   max-width: 400px;
+  letter-spacing: 0.025px;
 }
 
 .slider-options,
@@ -520,8 +695,20 @@ a {
 
 .slider-options {
   width: 240px;
-  margin-top: 60px;
+  margin-top: 58px;
   margin-right: 40px;
+  padding: 0;
+  position: relative;
+}
+
+.slider-options::after{
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -40px;
+  width: 272px;
+  height: 10px;
+  background: transparent url("../img/slider_shadow.png") no-repeat;
 }
 
 .slider-options li{
@@ -530,6 +717,7 @@ a {
   height: 60px;
   vertical-align: middle;
   background-color: #32425c;
+  letter-spacing: 0.4px;
 }
 
 .slider-options a{
@@ -541,14 +729,13 @@ a {
 }
 
 .slider-services {
-  padding-left: 90px;
   padding-right: 130px;
   display: flex;
   flex-direction: row;
 }
 
 .slider-content {
-  width: 620px;
+  min-width: 670px;
   padding-top: 30px;
 }
 
@@ -557,20 +744,49 @@ a {
   font-weight: 400;
   color: #32425c;
   text-transform: uppercase;
+  margin-top: 34px;
 }
 
 .slider-content p {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;	
-  line-height: 24px;
+  line-height: 25px;
   padding:0;
   max-width: 275px;
+  margin-top: -3px;
+}
+
+.slider-content ul li:nth-child(1) {
+  background: transparent url("../img/delivery-background.png") no-repeat;
+  background-position: 151px 15px;
+  padding-bottom: 100px;
+}
+
+.slider-content ul li:nth-child(2) {
+  background: transparent url("../img/guarantee-background.png") no-repeat;
+  background-position: 238px 11px;
+  padding-bottom: 100px;
+  padding-top: 20px;
+}
+
+.slider-content ul li:nth-child(2) h3{
+  margin-top: 0px;
+}
+
+.slider-content ul li:nth-child(2) p{
+  max-width: 365px;
+}
+
+.slider-content ul li:nth-child(3) {
+  background: transparent url("../img/credit-background.png") no-repeat;
+  background-position: 165px -10px;
+  padding-bottom: 100px;
 }
 
 .about {
   width: 940px;
   margin: 0 auto;
-  margin-top: 42px;
+  margin-top: 54px;
   margin-bottom: 67px;
   display: flex;
   flex-direction: row;
@@ -590,6 +806,7 @@ a {
   font-size: 30px;
   text-transform: uppercase;
   color: black;
+  letter-spacing: 0.1px;
 }
 
 .about p {    
@@ -598,8 +815,16 @@ a {
   max-width: 522px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
-  line-height: 26px;
+  line-height: 27px;
+  letter-spacing: 0.14px;
 }
+
+.about p:nth-child(3) {    
+  max-width: 400px;
+  line-height: 25px;
+  letter-spacing: 0.04px;
+}
+
 
 .transport-list {
   font-family: "Cuprum", Arial, sans-serif;
@@ -609,6 +834,26 @@ a {
   margin-top: -10px;
   margin-bottom: 34px;
   list-style: none;
+  padding-left: 35.9px;
+  letter-spacing: 0.1px;
+  
+}
+
+.transport-list li {
+  position: relative;
+  margin-left: -25px;
+}
+
+.transport-list li:before {
+  background-color: #ee3643;
+  content: "";
+  display: inline-block;
+  height: 2px;
+  position: relative;
+  vertical-align: middle;
+  width: 25px;
+  top: -1px;
+  left: -10px;
 }
 
 .company .link {
@@ -635,7 +880,7 @@ a {
 }
 
 .map img {
-  margin-bottom: 45px;
+  margin-bottom: 42px;
 }
 
 .about-contacts .link {
@@ -653,7 +898,6 @@ a {
 }
 
 .main-footer {
-  width: 1200px;
   margin: 0 auto;
   margin-top: 90px;
   color: white;
@@ -664,10 +908,14 @@ a {
 }
 
 .footer-information {
+  
+  padding-bottom: 32px;
+}
+
+.footer-information .container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding-bottom: 32px;
 }
 
 .footer-company {
@@ -693,6 +941,7 @@ a {
   margin-top: 47px;
   font-size: 18px;
   line-height: 23px;
+  margin-left: 4px;
 }
 
 .footer-navigation {
@@ -712,10 +961,12 @@ a {
 
 .main-footer-navigation {
   padding: 0;
+  margin-left: 4px;
 }
 
 .extra-footer-navigation {
   padding-left: 24px;
+  margin-top: 20px;
 }
 
 .main-footer-navigation a{
@@ -731,9 +982,14 @@ a {
   font-weight: 400;
   color: white;
   background-color: #293449;
+  
+  padding-top: 21px;
+}
+
+.copyright .container {
   display: flex;
   flex-direction: row;
-  padding-top: 21px;
+  justify-content: space-between;
 }
 
 .copyright a{
@@ -741,27 +997,80 @@ a {
 }
 
 .rights {
-  padding-left: 130px;
-  width: 230px;
-  padding-right: 160px;
+  width: 240px;
+  line-height: 19px;
 }
 
 .social {
+  width: 132px;
+  margin-left: 150px;
+  margin-right: 118px;
+}
+
+.social ul{
   list-style: none;
-  width: 130px;
-  padding-right: 80px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0px;
+}
+
+.social ul li a {
+  width: 41px;
+  height: 41px;
+  background-color: #212a3a;
+  border-radius: 50%;
+  margin-right: 4px;
+  color: transparent;
+}
+
+.vk a {
+  display: block;
+  text-align: center;
+  width: 100%;
+  background-image: url('../img/icon-vk.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.fb a {
+  display: block;
+  text-align: center;
+  width: 100%;
+  background-image: url('../img/icon-fb.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.insta a {
+  display: block;
+  text-align: center;
+  width: 100%;
+  background-image: url('../img/icon-insta.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.social ul li a:hover {
+  background-color: #ee3643;
+}
+
+.social ul li a:active {
+  background-color: #ee3643;
 }
 
 .developer {
   width: 300px;
   display: flex;
   flex-direction: row;
-  padding-right: 82px;
 }
 
 .developer p {
   max-width: 140px;
   padding-right: 52px;
+  line-height: 19px;
 }
 
 .feedback-form {
