--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,14 @@ a {
   padding-top: 9px;
 }
 
+.link:hover {
+  background-color: #ca2c37;
+}
+
+.link:active {
+  background-color: #ba2732;
+}
+
 .slider-items .link {
   padding-bottom: 12px;
 }
@@ -578,16 +586,29 @@ a {
 .actual-price{
   position: relative;
   display: inline-block;
-  width: 80px;
-  margin-right: 10px;
-  padding: 8px 12px 9px 29px;
+  min-width: 80px;
+  left: -6px;
+  padding: 9px 13px 10px 30px;
   margin-bottom: 20px;
   font-size: 17px;
   line-height: 18px;
   font-weight: 700;
-  line-height: 20px;
+  line-height: 21px;
   color: white;
   background-color: #ee3643;
+  border-radius: 3px;
+  margin-top: -3px;
+}
+
+.actual-price::after {
+  position: absolute;
+  content: "";
+  border: 20px solid #fff;
+  border-left-color: #ee3643;
+  width: 0;
+  height: 0;
+  top: 0;
+  right: -38px;
 }
 
 .past-price{
@@ -1093,12 +1114,19 @@ a {
   background-color: #ee3643;	 
 }
 
+.full {
+  text-transform: capitalize;
+  font-size: 17px;
+  padding: 0;
+}
+
 
 .user-navigation-login {
   padding: 0;
   width: 290px;
   display: flex;
   flex-direction: column;
+  margin-top: -10px;
 }
 
 .user-name {
@@ -1106,32 +1134,57 @@ a {
   flex-direction: row;
   width: 300px;
   margin-left: -10px;
+  margin-top: 8px;
 }
 
-.user-name a {
-  padding-right: 66px;
-  padding-left: 47px;
+.user-name .user {
+  position: relative;
+  padding-left: 48px;
   font-size: 21px;
   line-height: 21px;
   font-weight: 400;
   color: black;
   background-color: white;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 11px;
+  padding-bottom: 10px;
 }
 
-.logout {
+
+.user::before {
+  content: "";
   position: absolute;
-  margin-left: 245px;
-  top: 100px;
+  background: url(../img/icon-user.svg) no-repeat;
+  width: 20px;
+  height: 18px;
+  top: 11px;
+  left: 14px;
+}
+
+
+.logout {
+  position: relative;
+  display: inline-block;
+  width: 66px;
+  height: 45px;
+  background-color: white;
+}
+
+.logout::after {
+  content:"";
+  position: absolute;
+  background: url("../img/icon-logout.svg") no-repeat;
+  width: 21px;
+  height: 17px;
+  left: 36px;
+  top: 13px; 
 }
 
 .user-links {
   display: flex;
-  padding-top: 5px;
+  padding-top: 8px;
   flex-direction: row;
   justify-content: space-between;
-  width: 212px;
+  width: 220px;
 }
 
 .user-links div {
@@ -1147,6 +1200,21 @@ a {
   padding-left: 10px;
 }
 
+.my-order {
+  position: relative;
+}
+
+.my-order::after {
+  content:"";
+  position: absolute;
+  background-color: #32425c;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  top: 6px;
+  left: 98px;
+}
+
 .catalog-navigation {
   width: 940px;
   margin: 0 auto;
@@ -1157,12 +1225,45 @@ a {
   flex-direction: row;
   list-style: none;
   padding: 0;
-  margin-top: 19px;
+  margin-top: 21px;
+  position: relative;
 }
 
 .catalog-navigation ul li {
-  margin-right: 40px;
+  margin-right: 42px;
+  position: relative;
+  display: inline-block;
 }
+
+.catalog-navigation ul li:nth-of-type(1) {
+  margin-right: 54px;
+}
+
+.catalog-navigation ul:before {
+  content:"";
+  position: absolute;
+  background: url("../img/icon-home.svg") no-repeat;
+  width: 14px;
+  height: 13px;
+  top: 2px;
+  left: -2px;
+  cursor: pointer;
+}
+
+.catalog-navigation ul li::before {
+  content: "";
+  position: absolute;
+  background: url("../img/icon-right-small.svg") no-repeat;
+  width: 7px;
+  height: 14px;
+  top: 2px;
+  left: -25px;
+}
+
+.catalog-navigation ul li:first-child::before {
+  display: none;
+}
+
 
 .catalog-navigation a{
   font-family: "PT Sans", Arial, sans-serif;
@@ -1181,12 +1282,15 @@ a {
 }
 
 .catalog-current-page h2 {
+  margin-top: 21px;
   font-size: 30px;
-  line-height: 82px;
-  padding-left: 30px;
+  line-height: 90px;
+  padding-left: 29px;
   font-weight: 400;
   text-transform: uppercase;
   color: #32425c;
+  letter-spacing: 0.03px;
+  margin-bottom: 19px;
 }
 
 .catalog-page {
@@ -1203,23 +1307,114 @@ a {
 
 .filters form {
   max-width: 220px;
+  margin-left: -2px;
+}
+
+.filters fieldset {
+  border: none;
+  padding-left: 0px;
+}
+
+.price-filter {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.price-filter legend {
+  padding-top: 6px;
+}
+
+.range-filter {
+  width: 220px;
+  margin: 15px auto;
+  margin-bottom: 39px;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-bottom: 9px;
+  border-radius: 5px;
+  background: #f7f3ec;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+  background: #00ca74;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 30px;
+  left: 0px;
+  width: 4px;
+  height: 4px;
+  cursor: pointer;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  background: #ababab;
+  -webkit-box-shadow: 0 2px 1px 0 #cfcfcf;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+}
+
+.range-controls .toggle-min {
+  left: 20px;
+}
+
+.range-controls .toggle-max {
+  left: 160px;
 }
 
 .price-controls {
+  font-size: 0;
   max-width: 220px;
 }
 
-.min-price input,
-.max-price input {
-  width: 95px;
-  padding: 8px 10px;
-  text-align: center;
+.price-controls label {
+  font-size: 16px;
+  text-transform: uppercase;
+  display: inline-block;
+  width: 50%;
 }
 
+.max-price {
+  text-align: right;
+}
+
+.price-controls input {
+  font-size: 17px;
+  width: 75px;
+  padding: 10px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 3px;
+  background: #f1f1f1;
+  font-size: 17px;
+  line-height: 18px;
+}
+
+
 .filter-button {
-  width: 140px;
-  margin-top: 20px;
-  margin-left: 44px;
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  vertical-align: top;
+  margin-top: 30px;
+  letter-spacing: 0.5px;
+  padding: 11px 38px;
+  cursor: pointer;
 }
 
 .filters h3 {
@@ -1229,7 +1424,7 @@ a {
   color: black;
   text-transform: uppercase;
   background-color: #f7f3ec;
-  line-height: 42px;
+  line-height: 38px;
   padding-left: 20px;
   margin-top: 0;
 }
@@ -1257,6 +1452,7 @@ a {
   line-height: 20px;
   color: black;
   text-transform: uppercase;
+  padding-left: 0;
 }
 
 .filter-button {
@@ -1264,6 +1460,90 @@ a {
   font-size: 13px;
   color: black;
   background-color: white;
+}
+
+.brand-filter ul,
+.type-filter ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+input[type="checkbox"] {
+  display:none;
+}
+
+input[type="checkbox"] + label {
+  display: block;
+  padding-left: 34px;
+  padding-bottom: 18px;
+  line-height: 22px;
+  position: relative;
+  cursor: pointer;
+}
+
+input[type="checkbox"] + label::before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: 0;
+  width: 26px;
+  height: 25px;
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  cursor:pointer;
+  opacity: 0.7;
+}
+
+input[type="checkbox"]:checked + label::before {
+  background:url("../img/checkbox-on.svg") no-repeat;
+  opacity: 0.7;
+}
+
+input[type="checkbox"] + label:hover {
+  opacity: 1;
+}
+
+input[type="checkbox"]:disabled + label {
+  opacity: 0.3;
+}
+
+input[type="radio"] {
+  display:none;
+}
+
+input[type="radio"] + label {
+  display: block;
+  padding-left: 34px;
+  padding-bottom: 18px;
+  line-height: 22px;
+  position: relative;
+  cursor: pointer;
+}
+
+input[type="radio"] + label::before  {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: 0;
+  width:25px;
+  height:25px;
+  background-image: url("../img/radio-off.svg");
+  background-repeat: no-repeat;
+  cursor:pointer;
+  opacity: 0.7;
+}
+
+input[type="radio"]:checked + label::before {
+  background:url("../img/radio-on.svg") no-repeat;
+  opacity: 0.7;
+}
+
+input[type="radio"] + label:hover {
+  opacity: 1;
+}
+
+input[type="radio"]:disabled + label {
+  opacity: 0.3;
 }
 
 .sort {
@@ -1282,32 +1562,81 @@ a {
   background-color: #f7f3ec;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
+  line-height: 12px;
 }
 
 .sort-list ul {
   list-style: none;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 443px;
+  justify-content: flex-start;
+  width: 530px;
+}
+
+.sort-list ul li:nth-of-type(1) a{
+  margin-left: 25px;
+}
+
+.sort-list ul li:nth-of-type(3) a{
+  margin-right: 39px;
 }
 
 .sort-list h3{
   font-size: 13px;
   font-weight: 400;
-  width: 223px;
+  width: 170px;
   padding-left: 20px;
 }
 
 .sort-list a {
   color: #acaaa5;
   border-bottom: 1px dotted #ee3643; 
+  margin-right: 69px;
 }
 
-.up,
-.down {
-  display: none;
+.sort-list li .icon-up a,
+.sort-list li .icon-down a {
+  width: 11px;
+  height: 11px;
+  display: block;
+  opacity: 0.2;
+  margin-left: 3px;
+  margin-right: -10px;
+  border-bottom: none;
+}
+
+.icon-up,
+.icon-down {
+  width: 11px;
+  height: 11px;
+
+}
+
+.icon-up {
+  margin-right: 19px;
+  margin-left: 3px;
+}
+
+.icon-up a {
+  text-align: center;
+  display: block;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url('../img/icon-up-dir.svg');
+  text-indent:-9999px;
+  margin-right: 20px;
+}
+
+.icon-down a {
+  text-align: center;
+  display: block;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url('../img/icon-down-dir.svg');
+  text-indent:-9999px;
 }
 
 .catalog-items {
@@ -1334,6 +1663,7 @@ a {
   justify-content: flex-end; 
   align-items: center; 
   text-align: center;
+  margin-bottom: 19px;
 }
 
 .one-price {
@@ -1347,13 +1677,14 @@ a {
   line-height: 20px;
   padding-left: 16px;
   padding-right: 16px;
-  padding-top: 14px;
+  padding-top: 10px;
   color: black;
   margin: 0 auto;
 }
 
 .pages {
   width: 700px;
+  margin-top: -30px;
 
 }
 
@@ -1366,9 +1697,9 @@ a {
 }
 
 .pages ul li{
-  margin-right: 10px;
+  margin-right: 9px;
   border: 1px solid #e5e5e5; 
-  padding: 10px 16px 10px 16px;
+  padding: 10px 14px 10px 16px;
   margin-top: 30px;
 }
 
@@ -1377,39 +1708,44 @@ a {
   font-size: 13px;
   text-transform: uppercase;
   color: black;
-  
+}
+
+.pages ul .next-page {
+  padding: 10px 31px 10px 31px;
 }
 
 .about-type {
-  width: 1200px;
-  margin: 0 auto;
-  margin-top: 40px;
-  padding-bottom: 55px;
+  margin-top: 43px;
+  padding-bottom: 68px;
   color: black;
   background-color: #f2f6f8;
 }
 
 .about-type h2 {
-  padding-left: 130px;
-  padding-top: 75px;
-  padding-right: 130px;
+  padding-top: 72px;
   font-weight: 400;
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 30px;
   text-transform: uppercase;
+  letter-spacing: 0.15px;
 }
 
 .about-type p {
-  padding-left: 130px;
-  padding-right: 130px;
-  padding-top: 10px;
+  padding-top: 8px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 24px;
   max-width: 940px;
+  letter-spacing: 0.02px;
+  margin-bottom: 0;
 }
 
-.catalog-footer {
+.about-type p:nth-child(3) {
+  letter-spacing: 0.22px;
+  margin-top: -8px;
+}
+
+.main-footer-catalog {
   margin-top: 0;
 }
 
