--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  min-width: 1200px;
 
   font-family: "Cuprum", Arial, sans-serif;
   font-size: 16px;
@@ -174,7 +175,7 @@ a {
 }
 
 .cart a  {  
-  padding-left: 50px;
+  padding-left: 24px;
   font-weight: 400;
 }
 
@@ -489,11 +490,20 @@ a {
   content: "";
   position: absolute;
   background: transparent url("../img/new_flag.png") no-repeat;
+  width: 61px;
+  height: 61px;
+  right: -2px;
+  z-index: 100;
+  top: -1px;
+}
+
+
+.features .new::before  {
   width: 60px;
   height: 60px;
   right: 0px;
   z-index: 100;
-  top: 0;
+  top: 0px;
 }
 
 .instrument {
@@ -644,15 +654,14 @@ a {
 .link {
   font-size: 14px;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 38px;
   text-transform: uppercase;
   color: white;
   background-color: #ee3643;
-  padding-left: 50px;
-  padding-right: 45px;
-  padding-bottom: 9px;
-  padding-top: 9px;
   border-radius: 3px;
+  min-width: 195px;
+  display: inline-block;
+  text-align: center;
 }
 
 .link:hover {
@@ -664,7 +673,7 @@ a {
 }
 
 .slide-content .link {
-  padding-bottom: 12px;
+  margin-top: -7px;
 }
 
 .side-items {
@@ -693,10 +702,9 @@ a {
 }
 
 .section-top .link {
-   margin-right: 25px;
-   padding-left: 54px;
-   padding-right: 54px;
-  line-height: 20px;
+  margin-right: 24px;
+  margin-top: -3px;
+  min-width: 253px;
 }
 
 .popular {
@@ -803,7 +811,7 @@ a {
   text-transform: uppercase;
   position: absolute;
   padding: 45px 0;
-  width: 217px;
+  width: 100%;
   top: 0;
   left: 0;
 }
@@ -901,9 +909,7 @@ a {
 }
 
 .brands .section-top .link {
-  margin-right: 25px;
-  padding-left: 70px;
-  padding-right: 67px;
+  margin-top: -1px;
 }
 
 .brands-list {
@@ -919,17 +925,23 @@ a {
   border: 1px solid #eaeaea;
   width: 220px;
   height: 145px;
-  display:flex;
-  flex-direction: column;
-  justify-content: center; 
-  align-items: center; 
-  text-align: center;
   margin-bottom: 16px;
 }
 
 .brands-list li:hover {
   border: 1px solid #ffffff;
   box-shadow: 0 10px 25px 0 rgba(41, 52, 73, 0.5);
+}
+
+.brands-list li a {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display:flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;
 }
 
 .services {	
@@ -1135,7 +1147,6 @@ a {
   line-height: 40px;
   margin: 0;
   margin-top: -10px;
-  margin-bottom: 34px;
   list-style: none;
   padding-left: 35.9px;
   letter-spacing: 0.1px;
@@ -1163,14 +1174,11 @@ a {
   text-align: center;
   font-size: 14px;
   font-weight: 400;
-  line-height: 26px;
   text-transform: uppercase;
   color: white;
   background-color: #ee3643;
-  padding-left: 41px;
-  padding-right: 40px;
-  padding-bottom: 10px;
-  padding-top: 11px;
+  margin-top: 27px;
+  min-width: 220px;
 }
 
 .company .link:hover,
@@ -1204,19 +1212,16 @@ a {
   text-align: center;
   font-size: 14px;
   font-weight: 400;
-  line-height: 26px;
   text-transform: uppercase;
   color: white;
   background-color: #ee3643;
-  padding-left: 65px;
-  padding-right: 58px;
-  padding-bottom: 10px;
-  padding-top: 11px;
+  margin-top: -6px;
+  min-width: 300px;
 }
 
 .main-footer {
   margin: 0 auto;
-  margin-top: 90px;
+  margin-top: 86px;
   color: white;
   background-color: #32425c;
   font-size: 18px;
@@ -1445,6 +1450,7 @@ a {
   font-size: 17px;
   padding: 0;
   border-radius: 0;
+  min-width: 100px;
 }
 
 
@@ -1584,7 +1590,13 @@ a {
 }
 
 .catalog-navigation ul li:nth-of-type(1) {
-  margin-right: 54px;
+  margin-right: 40px;
+}
+
+.home {
+  display: inline-block;
+  width: 14px;
+  height: 13px;
 }
 
 .catalog-navigation ul:before {
@@ -1596,6 +1608,7 @@ a {
   top: 2px;
   left: -2px;
   cursor: pointer;
+  z-index: 0;
 }
 
 .catalog-navigation ul li::before {
@@ -1732,6 +1745,17 @@ a {
   text-transform: uppercase;
   display: inline-block;
   width: 50%;
+}
+
+.min-price {
+  position: relative;
+}
+
+.min-price::after {
+  content: "—";
+  position: absolute;
+  left: 105px;
+  top: 11px;
 }
 
 .max-price {
@@ -1969,15 +1993,16 @@ input[type="radio"]:disabled + label {
   opacity: 1;
 }
 
-.sort-list li .icon-up a:active{
+.sort-list li .icon-up a:active .up-path{
   opacity: 1;
-  background-image: url('../img/icon-up-dir-active.svg');
+  fill: #ee3643;
 }
 
-.sort-list li .icon-down a:active {
+.sort-list li .icon-down a:active .down-path{
   opacity: 1;
-  background-image: url('../img/icon-down-dir-active.svg');
+  fill: #ee3643;
 }
+
 
 .icon-up,
 .icon-down {
@@ -1995,10 +2020,6 @@ input[type="radio"]:disabled + label {
   text-align: center;
   display: block;
   width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url('../img/icon-up-dir.svg');
-  text-indent:-9999px;
   margin-right: 20px;
 }
 
@@ -2006,10 +2027,6 @@ input[type="radio"]:disabled + label {
   text-align: center;
   display: block;
   width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url('../img/icon-down-dir.svg');
-  text-indent:-9999px;
 }
 
 .catalog-items {
@@ -2030,7 +2047,7 @@ input[type="radio"]:disabled + label {
 .catalog-items ul li{
   font-family: "PT Sans", Arial, sans-serif;
   border: 1px solid #eaeaea;
-  width: 220px;
+  width: 218px;
   display:flex;
   flex-direction: column;
   justify-content: flex-end; 
@@ -2309,6 +2326,7 @@ input[type="radio"]:disabled + label {
   height: 446px;
   background: url(../img/full_map.png);
   box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
+  margin-left: 25%;
 }
 
 .modal-cart {
@@ -2347,19 +2365,13 @@ input[type="radio"]:disabled + label {
 }
 
 .modal-cart-buttons a {
-  padding-left: 59px;
-  padding-right: 62px;
+  min-width: 220px;
 }
 
 .modal-cart-buttons .btn-order {
   margin-right: 20px;
   background-color: #ee3643;
   color: white;
-}
-
-.modal-cart-buttons .btn-continue {
-  padding-right: 47px;
-  padding-left: 45px;
 }
 
 @keyframes bounce {
